[gd_scene load_steps=16 format=3 uid="uid://dcok5vcl14fku"]

[ext_resource type="Script" path="res://player/player.gd" id="1_syyfw"]
[ext_resource type="Texture2D" uid="uid://buclwho8cys8u" path="res://characters_packed.png" id="2"]
[ext_resource type="Script" path="res://interface/interface.gd" id="3_3jbf0"]
[ext_resource type="Texture2D" uid="uid://pishgll0wfv7" path="res://UI/pause.png" id="5_poy4v"]
[ext_resource type="Texture2D" uid="uid://dqsj4uex2ufvm" path="res://ass/bazoka.png" id="5_ui3uc"]
[ext_resource type="Texture2D" uid="uid://yl1okhjv17wq" path="res://tiles_packed.png" id="8_ua8rk"]

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("2")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("2")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("2")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource("2")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("2")
region = Rect2(168, 0, 24, 24)

[sub_resource type="SpriteFrames" id="6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("5")
}],
"loop": true,
"name": &"Idel",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("1")
}, {
"duration": 1.0,
"texture": SubResource("2")
}],
"loop": true,
"name": &"uu",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(14, 18)

[sub_resource type="RectangleShape2D" id="8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4d40c"]
size = Vector2(58.0002, 55.9999)

[node name="player" type="CharacterBody2D" groups=["player"]]
z_index = 1
script = ExtResource("1_syyfw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("6")
animation = &"Idel"
flip_h = true

[node name="Marker2D" type="Marker2D" parent="AnimatedSprite2D"]
position = Vector2(10, 7)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("7")

[node name="Camera2D2" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -1)
shape = SubResource("8")

[node name="interface" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -289.0
offset_top = -163.0
offset_right = 289.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
rotation = 6.28319
script = ExtResource("3_3jbf0")

[node name="VBoxContainer" type="VBoxContainer" parent="interface"]
layout_mode = 1
offset_right = 107.0
offset_bottom = 93.0
scale = Vector2(0.6, 0.6)

[node name="coins" type="NinePatchRect" parent="interface/VBoxContainer"]
layout_mode = 2

[node name="coin" type="Sprite2D" parent="interface/VBoxContainer/coins"]
position = Vector2(76.6667, 76.6667)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(201.026, 128.918, 12.1618, 12.0266)

[node name="key" type="Sprite2D" parent="interface/VBoxContainer/coins"]
position = Vector2(76.6666, 76.6667)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(126.269, 19.7021, 17.4319, 16.3508)

[node name="coin_one" type="Sprite2D" parent="interface/VBoxContainer/coins"]
position = Vector2(35, 76.6667)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(21.9991, 146.567, 9.99966, 12.1617)

[node name="coin_two" type="Sprite2D" parent="interface/VBoxContainer/coins"]
position = Vector2(35, 76.6667)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(39.9449, 146.729, 9.99966, 12.0266)

[node name="coin_three" type="Sprite2D" parent="interface/VBoxContainer/coins"]
position = Vector2(35, 76.6667)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(57.9722, 146.837, 9.7294, 12.0266)

[node name="coin_four" type="Sprite2D" parent="interface/VBoxContainer/coins"]
position = Vector2(35, 76.6667)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(75.8374, 146.81, 10.4051, 12.1618)

[node name="coin_five" type="Sprite2D" parent="interface/VBoxContainer/coins"]
position = Vector2(35, 76.6667)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(93.8088, 146.972, 10.2699, 12.1618)

[node name="coin_six" type="Sprite2D" parent="interface/VBoxContainer/coins"]
position = Vector2(35, 78.3333)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(111.891, 146.621, 10.2699, 12.7023)

[node name="coin_seven" type="Sprite2D" parent="interface/VBoxContainer/coins"]
position = Vector2(35, 76.6667)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(129.837, 146.918, 10.4051, 12.1617)

[node name="coin_eight" type="Sprite2D" parent="interface/VBoxContainer/coins"]
position = Vector2(35, 76.6667)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(147.864, 146.756, 10.2699, 12.1618)

[node name="coin_nine" type="Sprite2D" parent="interface/VBoxContainer/coins"]
position = Vector2(35, 76.6667)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(166.053, 146.81, 9.99966, 12.2969)

[node name="Label" type="Label" parent="interface/VBoxContainer/coins"]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = 57.0
offset_right = 28.0
offset_bottom = 92.0
grow_vertical = 2
text = "0"

[node name="Label2" type="Label" parent="interface/VBoxContainer/coins"]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 31.6667
offset_top = 56.6667
offset_right = 57.6667
offset_bottom = 91.6667
grow_vertical = 2
text = "/9"

[node name="lvl" type="NinePatchRect" parent="interface/VBoxContainer"]
layout_mode = 2

[node name="lvl" type="Label" parent="interface/VBoxContainer/lvl"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -48.3333
offset_top = 9.33336
offset_right = -8.33334
offset_bottom = 35.3334
grow_horizontal = 0
grow_vertical = 2
text = "1"

[node name="dor" type="Sprite2D" parent="interface/VBoxContainer/lvl"]
position = Vector2(78.4583, 21.5)
scale = Vector2(2.20833, 2.22727)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(179.972, 102.783, 18.1075, 22.8371)

[node name="lvl_one" type="Sprite2D" parent="interface/VBoxContainer/lvl"]
position = Vector2(40, 24.3333)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(21.9991, 146.567, 9.99966, 12.1617)

[node name="lvl_two" type="Sprite2D" parent="interface/VBoxContainer/lvl"]
position = Vector2(40, 24.3333)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(39.9721, 146.837, 10.2699, 12.1618)

[node name="lvl_three" type="Sprite2D" parent="interface/VBoxContainer/lvl"]
position = Vector2(40, 24.3333)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(57.5935, 146.567, 10.6753, 12.7023)

[node name="lvl_four" type="Sprite2D" parent="interface/VBoxContainer/lvl"]
position = Vector2(40, 24.3333)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(75.7015, 146.837, 10.4051, 12.4321)

[node name="lvl_five" type="Sprite2D" parent="interface/VBoxContainer/lvl"]
position = Vector2(40, 24.3333)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(93.8364, 146.864, 10.27, 12.1618)

[node name="lvl_six" type="Sprite2D" parent="interface/VBoxContainer/lvl"]
position = Vector2(40, 24.3333)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(111.836, 146.851, 10.1348, 12.1618)

[node name="lvl_seven" type="Sprite2D" parent="interface/VBoxContainer/lvl"]
position = Vector2(40, 24.3333)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(130.026, 146.919, 10.1348, 12.2969)

[node name="lvl_eight" type="Sprite2D" parent="interface/VBoxContainer/lvl"]
position = Vector2(40, 24.3333)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(147.539, 146.783, 10.6754, 12.1618)

[node name="lvl_nine" type="Sprite2D" parent="interface/VBoxContainer/lvl"]
position = Vector2(40, 24.3333)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(165.998, 146.54, 10.27, 12.7023)

[node name="lvl_zero" type="Sprite2D" parent="interface/VBoxContainer/lvl"]
position = Vector2(40, 24.3333)
scale = Vector2(3.47223, 3.30555)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(4.05282, 146.553, 10.2564, 12.7834)

[node name="lvl_zero2" type="Sprite2D" parent="interface/VBoxContainer/lvl"]
visible = false
position = Vector2(15, 29.3333)
scale = Vector2(1.70139, 2.21528)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(3.70146, 146.626, 10.3623, 12.5647)

[node name="lvl_one2" type="Sprite2D" parent="interface/VBoxContainer/lvl"]
visible = false
position = Vector2(13.3333, 29.3333)
scale = Vector2(1.70139, 2.21528)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(21.9991, 146.567, 9.99966, 12.1617)

[node name="VBoxContainer2" type="VBoxContainer" parent="interface"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -96.0
offset_right = 260.0
offset_bottom = 91.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)

[node name="NinePatchRect" type="NinePatchRect" parent="interface/VBoxContainer2"]
layout_mode = 2
patch_margin_top = 2

[node name="one" type="Sprite2D" parent="interface/VBoxContainer2/NinePatchRect"]
position = Vector2(142, 24)
scale = Vector2(3.5357, 3.45834)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(73.7826, 38.5673, 14.3238, 12.8374)

[node name="bomb" type="Sprite2D" parent="interface/VBoxContainer2/NinePatchRect"]
position = Vector2(210, 87.9948)
scale = Vector2(3.5357, 3.45834)
texture = ExtResource("5_ui3uc")
region_enabled = true
region_rect = Rect2(37.1339, 28.9452, 10.405, 13.6482)

[node name="two" type="Sprite2D" parent="interface/VBoxContainer2/NinePatchRect"]
position = Vector2(90.0001, 25.9999)
scale = Vector2(3.55357, 3.66666)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(73.7826, 38.5673, 14.3238, 12.8374)

[node name="three" type="Sprite2D" parent="interface/VBoxContainer2/NinePatchRect"]
position = Vector2(38, 24)
scale = Vector2(3.5357, 3.54167)
texture = ExtResource("8_ua8rk")
region_enabled = true
region_rect = Rect2(73.7826, 38.5673, 14.3238, 12.8374)

[node name="Area2D" type="Area2D" parent="interface/VBoxContainer2/NinePatchRect"]

[node name="pause" type="Sprite2D" parent="interface/VBoxContainer2/NinePatchRect/Area2D"]
position = Vector2(206, 27.9998)
scale = Vector2(3.5357, 3.45834)
texture = ExtResource("5_poy4v")
region_enabled = true
region_rect = Rect2(15.7826, 15.9184, 16.2157, 16.3508)

[node name="contune" type="Sprite2D" parent="interface/VBoxContainer2/NinePatchRect/Area2D"]
visible = false
position = Vector2(206, 27.9998)
scale = Vector2(3.5357, 3.45834)
texture = ExtResource("5_poy4v")
region_enabled = true
region_rect = Rect2(32.0682, 31.7746, 16.2154, 16.4871)

[node name="CollisionShape2D" type="CollisionShape2D" parent="interface/VBoxContainer2/NinePatchRect/Area2D"]
position = Vector2(207, 27.9948)
shape = SubResource("RectangleShape2D_4d40c")

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="mouse_entered" from="interface/VBoxContainer2/NinePatchRect/Area2D" to="interface" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="interface/VBoxContainer2/NinePatchRect/Area2D" to="interface" method="_on_area_2d_mouse_exited"]
